<resources>
    <string name="app_name">Transient Contacts</string>
    <string name="title_activity_main">@string/app_name</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="default_nav_menu_title">Menu 1</string>
    <string name="title_activity_call_end">@string/app_name</string>
    <string name="temp_contact_number">+91 984 024 7755</string>
    <string name="lbl_contact_question">Add to Transient Contacts?</string>
    <string name="lbl_home_hint">Use Transient Contacts to apply retention period to temporary contacts. These contacts are automatically added to and removed from your People list based on their retention period.</string>
    <string name="title_activity_save_contact">@string/app_name</string>
    <string name="default_text_contact_field">+00 000 000 0000</string>
    <string name="default_text_contact_add">Adding this contact to Transient Contacts. Cancel if you changed your mind.</string>
    <string name="default_text_contact_name">Full name</string>
    <string name="default_text_retention_days">10</string>
    <string name="default_text_notes">Notes</string>
    <string name="title_activity_contact_saved">@string/app_name</string>
    <string name="save_button_text">SAVE</string>
    <string name="default_saved_success_msg">Successfully saved!\nGo to the application to view all contacts</string>
    <string name="close_button_text">Close</string>
</resources>
