<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.noname.batanbensigar.transientcontacts.CallEndActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fld_contact_number"
            style="@style/ContactText"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/status_bar_pad"
            android:gravity="center_horizontal"
            android:text="@string/temp_contact_number" />

        <TextView
            android:id="@+id/lbl_Add_Contacts"
            style="@style/MediumText"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/lbl_contact_question" />

        <ImageButton
            android:id="@+id/btn_add_yes"
            style="@style/ImageButton.Yes"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/btn_add_no"
            style="@style/ImageButton.No"
            android:clickable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fld_hint_text"
            style="@style/HintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/side_border_padding"
            android:layout_marginLeft="@dimen/side_border_padding"
            android:layout_marginRight="@dimen/side_border_padding"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/lbl_home_hint" />
    </LinearLayout>

</LinearLayout>
